--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+lab4/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[codz]
@@ -205,3 +207,6 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+go.mod
+go.sum
+tasks_test.go
